--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ background-image: url("https://www.transparenttextures.com/patterns/ag-square.pn
   font-size:30.6px;
   font-family:canva sans;
   font-weight:bold;
+  margin-right:60px;
   padding-left:10px;
 }
 /* .one{
